# ModelLoad

./: CMakeLists.txt  README.md  main.c  main_include_path.h
buffer_object/: buffer_object.c  buffer_object.h
cmake/: glfw.cmake
create_window/: window.c  window.h
glad/: glad.c  glad.h
include/cglm/: vec3-ext.h  vec4-ext.h  vec4.h
include/glad/: glad.h
model/: model_obj.c  model_obj.h  model_type.h  read_model_file.c  read_model_file.h
model_file/Bloodborne/: c4520 lady maria.mtl
shader_code/light/: light,fs  light.vs
shader_code/obj_model/: obj_model.fs  obj_model.vs
shader_code/shader/: shader.fs  shader.vs
shader_obj/: shader.c  shader.h
